--- a/src/olympia/devhub/templates/devhub/new-landing/components/my-addons.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/my-addons.html
@@ -13,35 +13,8 @@
     </a>
 {% endmacro %}
 
-<div class="DevHub-MyAddons content">
+<div class="DevHub-MyAddons content scheme-default">
   <div>
-    <div class="DevHub-MyAddons-whatsnew-container">
-      <div>
-        <h2>{{ _("Welcome Back") }}</h2>
-      </div>
-      <div>
-        <p>
-          {% trans amo_link_open='<a href="https://addons.mozilla.org/">'|safe, amo_link_close='</a>'|safe %}
-          Want your extension to be featured on {{ amo_link_open }}addons.mozilla.org{{ amo_link_close }}?
-          Our featured extensions policies will tell you what you need to know.
-          {% endtrans %}
-        </p>
-        <a href="https://developer.mozilla.org/Add-ons/AMO/Policy/Featured" class="Button">
-          {{ _('Learn More') }}
-        </a>
-      </div>
-      <div>
-        <p>
-          {% trans %}
-          You can help users gain confidence and trust in your extension by following our best practices for onboarding users.
-          {% endtrans %}
-        </p>
-        <a href="https://developer.mozilla.org/docs/Mozilla/Add-ons/WebExtensions/onboarding_upboarding_offboarding_best_practices" class="Button">
-          {{ _('See Best Practices') }}
-        </a>
-      </div>
-    </div>
-
     <h2>{{ _('My Add-ons') }}</h2>
 
     {% if recent_addons %}
