--- a/src/olympia/devhub/templates/devhub/new-landing/components/overview.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/overview.html
@@ -2,13 +2,12 @@
   <div>
     <h1>{{ _('Customize Firefox') }}</h1>
     <p>
-      {% trans html_link_open='<a href="https://developer.mozilla.org/en-US/docs/Web/HTML">'|safe, js_link_open='<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">'|safe,
-               css_link_open='<a href="https://developer.mozilla.org/en-US/docs/Web/CSS">'|safe, link_close='</a>'|safe %}
-        Add-ons let millions of Firefox users enhance their browsing experience.
-        If you know {{ html_link_open }}HTML{{ link_close }}, {{ js_link_open }}JavaScript{{ link_close }}, and {{ css_link_open }}CSS{{ link_close }},
-        you already have all the necessary skills to make a great add-on.
+      {% trans %}
+        Whether you’re new to extension development, polishing up or porting an
+        existing extension or theme, or creating a custom enterprise solution,
+        we’ve got the resources to support you.
       {% endtrans %}
     </p>
-    <a href="https://developer.mozilla.org/en-US/Add-ons" class="Button Button--primary">{{ _('Learn How to Make an Add-on') }}</a>
+    <a href="https://extensionworkshop.com" class="Button Button--primary">{{ _('Learn how to make an extension') }}</a>
   </div>
 </section>
