--- a/static/css/devhub/new-landing/common.less
+++ b/static/css/devhub/new-landing/common.less
@@ -5,10 +5,10 @@
     color: @color-text;
     padding: 20px;
 
-    @media @medium {
+    @media @large {
       margin: 0 auto;
       max-width: @grid-max;
-      padding: 0 20px;
+      padding: 0 80px;
     }
   }
 
@@ -19,12 +19,8 @@
 
   li {
     color: @color-text;
-    font-weight: 400;
+    font-size: 14px;
   }
-}
-
-.scheme-default {
-  background-color: @color-scheme-default-background;
 }
 
 .scheme-light {
@@ -42,7 +38,7 @@
 }
 
 .scheme-medium {
-  background-color: @color-scheme-medium-background;
+  background: @color-scheme-medium-background;
 
   p,
   li {
@@ -51,7 +47,7 @@
 
   &:before,
   &:after {
-    background-color: @color-scheme-medium-background;
+    background: @color-scheme-medium-background;
   }
 }
 
@@ -79,27 +75,10 @@
 }
 
 .DevHub-content-image-wrapper {
-  max-width: 33%;
   padding: 30px 0;
-  position: absolute;
   top: 20px;
-  right: 20px;
   z-index: 2;
-
-  html[dir=rtl] & {
-    left: 20px;
-    right: auto;
-  }
-}
-
-.DevHub-content-image-wrapper--publish-addon {
-  right: 0;
-
-  html[dir=rtl] & {
-    transform: scaleX(-1);
-    left: 0;
-    right: auto;
-  }
+  text-align: center;
 }
 
 .DevHub-content-copy {
@@ -108,70 +87,18 @@
 }
 
 .DevHub-callout-box {
-  border: 8px solid @color-callout-border;
   background: #fff;
-  // Override default padding on container
-  // with negative margin.
-  margin: 0 -20px -20px;
+  margin: 0 20px 0;
   padding: 0 20px 20px;
   position: relative;
 
-  @media @medium {
-    box-shadow: 8px 8px 0 0 rgba(0, 0, 0, 0.15);
-    margin: -50px auto 0 auto;
-    max-width: 70%;
-  }
+  box-shadow: 0 0 1px rgba(32,18,58,0.04);
+  box-shadow: 0 1px 2px rgba(34,0,51,0.04);
+  box-shadow: 0 2px 1px rgba(7,48,114,0.12);
+  box-shadow: 0 1px 6px rgba(14,13,26,0.12);
 
-  &::after {
-    background-image: url(../../../img/developers/new-landing/ladder.png);
-    background-repeat: no-repeat;
-    content: '';
-    display: block;
-    height: 275px;
-    position: absolute;
-    right: -186px;
-    top: ~"calc(50% - 57px)"; // 57px is from the top of the image to the orange cog.
-    width: 227px;
-
-    html[dir=rtl] & {
-      left: -186px;
-      right: auto;
-      transform: scaleX(-1);
-    }
-
-    @media @retina {
-      background-image: url(../../../img/developers/new-landing/ladder-2x.png);
-      background-size: 100%;
-    }
-  }
-}
-
-.DevHub-callout-header {
-  font-size: 22px;
-  min-height: 50px;
-  padding-right: 35px;
-  position: relative;
-
-  &::after {
-    background: url(../../../img/developers/new-landing/callout-header-fox.svg) no-repeat 100% 50%;
-    content: '';
-    display: inline-block;
-    height: 52px;
-    position: absolute;
-    right: 0;
-    top: ~"calc(50% - 26px)";
-    width: 47px
-  }
-
-  html[dir=rtl] & {
-    padding-right: 0;
-    padding-left: 35px;
-
-    &::after {
-      transform: scaleX(-1);
-      left: 0;
-      right: auto;
-    }
+  @media @large {
+    margin: 50px auto 0;
   }
 }
 
@@ -184,100 +111,14 @@
   }
 }
 
-.DevHub-content-header--manage {
-  max-width: 100%;
-  text-align: center;
-}
-
-.DevHub-content-container--manage {
-  flex-direction: column;
-  background-image: url(../../../img/developers/new-landing/manage-addon.png);
-  background-size: auto 50%;
-  background-repeat: no-repeat;
-  background-position: 50% 10px;
-
-  @media @medium {
-    background-position: 30px 100%;
-    background-size: auto 95%;
-
-    html[dir=rtl] & {
-      background-position: 100% 30px;
-    }
-  }
-
-  @media @retina {
-    background-image: url(../../../img/developers/new-landing/manage-addon-2x.png);
-  }
-}
-
-.DevHub-content-copy--manage,
-.DevHub-content-copy--evolution {
-  margin-bottom: 30px;
-  max-width: 100%;
-}
-
-.DevHub-content-copy--manage .Button {
-  display: block;
-}
-
-.DevHub-content-copy--evolution {
-  margin-bottom: 0;
-
-  .Button--evolution {
-    margin: 20px auto 10px;
-  }
-}
-
-@media @small {
-  .DevHub-content-copy {
-    max-width: 66%;
-  }
-
-  .DevHub-content-image-wrapper {
-    max-width: 33%;
-  }
-
-  .DevHub-content-copy--manage,
-  .DevHub-content-copy--evolution {
-    max-width: 100%;
-  }
-}
-
 @media @medium {
   .DevHub-content-copy,
   .DevHub-content-image-wrapper {
     max-width: 50%;
   }
 
-  .DevHub-content-container--manage {
-    flex-direction: row;
-  }
-
-  .DevHub-content-header--manage {
-    text-align: left;
-    max-width: 66%;
-
-    html[dir=rtl] & {
-      text-align: right;
-    }
-  }
-
   .DevHub-content-copy .Button {
     margin: 25px 0 40px 0;
-  }
-
-  .DevHub-content-copy--manage .Button {
-    display: inline-block;
-  }
-
-  .DevHub-content-copy--manage,
-  .DevHub-content-copy--evolution {
-      margin-bottom: 0;
-      width: 50%;
-  }
-
-  .DevHub-publish-addon .DevHub-content-container {
-    padding-bottom: 40px;
   }
 
   .DevHub-content-copy {
@@ -295,51 +136,21 @@
 
   .DevHub-content-image-wrapper {
     position: relative;
+    padding-left: 30px;
     top: 10px;
     width: 100%;
-
-    &::before {
-      content: '';
-      display: block;
-      // Pad out the wrapper to a percentage
-      // based on the wrapper's width.
-      padding-bottom: 70%;
-
-      .DevHub-publish-addon & {
-        padding-bottom: 60%;
-      }
-    }
-  }
-
-  .DevHub-content-image-wrapper--port-chrome {
-    right: 0;
-  }
-
-  .DevHub-content-image-wrapper--publish-addon {
-    right: 80px;
-
-    html[dir=rtl] & {
-      left: 80px;
-      right: 0;
-    }
   }
 
   .DevHub-content-image {
-    position: absolute;
     top: 50px;
-    right: 0;
-    left: 20px;
     bottom: 0;
-
-    html[dir=rtl] & {
-      left: 0;
-      right: 20px;
-    }
   }
+}
 
-  .DevHub-content-image--publish-addon {
-    top: -70px;
-    min-width: 350px;
-    max-width: 115%;
-  }
+.Color-Rule {
+  width: 40px;
+  height: 2px;
+  margin-left: 0;
+  border: none;
+  background: linear-gradient(90deg, #0099F1, #9059FF, #B833E1, #E31587, #FC4055, #FF9640, #FFF36E);
 }
