--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -1,7 +1,7 @@
 .DevHub-Navigation {
   box-shadow: 0 4px 16px rgba(12,12,13,0.1);
 
-  > .DevHub-Navigation-list-wrapper {
+  .DevHub-Navigation-list-wrapper {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 5px;
