Fix review logs layout Fixes #3447

--- a/static/css/zamboni/reviewers.less
+++ b/static/css/zamboni/reviewers.less
@@ -403,7 +403,7 @@ ul.tabnav a:hover {
 table.data-grid tr.comments td {
     border-top: none;
     background: #def;
-    overflow-wrap: break-word;
+    word-break: break-all;
     hyphens: auto;
 }
 
