--- a/src/olympia/devhub/templates/devhub/new-landing/components/get_involved.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/get_involved.html
@@ -2,8 +2,8 @@
   <div class="DevHub-content-container DevHub-content-container--get-involved">
     <div class="DevHub-callout-box DevHub-callout-box--get-involved">
       <div class="DevHub-content-image-wrapper DevHub-content-image-wrapper--get-involved">
-        <img class="DevHub-content-image DevHub-content-image--submit-or-manage-addon"
-             src="{{ STATIC_URL }}img/developers/new-landing/get-involved.png" alt="">
+        <img class="DevHub-content-image DevHub-content-image--get-involved"
+             src="{{ STATIC_URL }}img/developers/new-landing/get-involved.svg" alt="">
       </div>
       <div>
         <h3>{{ _('Get involved') }}</h3>
