--- a/static/css/devhub/new-landing/sections/get-involved.less
+++ b/static/css/devhub/new-landing/sections/get-involved.less
@@ -1,3 +1,12 @@
+.DevHub-content-image--get-involved {
+    height: auto;
+    width: 170px;
+}
+
+.DevHub-content-image-wrapper--get-involved {
+    padding-bottom: 10px;
+}
+
 @media @medium {
     .DevHub-content-image-wrapper--get-involved {
         float: right;
