simple authenticated devhub footer

--- a/static/css/devhub/new-landing/base.less
+++ b/static/css/devhub/new-landing/base.less
@@ -202,8 +202,8 @@ h3 {
 @import 'sections/get-involved';
 @import 'sections/banner';
 
-// Footer
-@import 'footer';
+// Developer Footer
+@import 'dev-footer';
 
 // Tooltip
 @import '../../impala/tooltips';
