add frontend style common site footer

--- a/src/olympia/devhub/templates/devhub/index.html
+++ b/src/olympia/devhub/templates/devhub/index.html
@@ -58,6 +58,7 @@
       {% include 'devhub/new-landing/components/my-addons.html' %}
       {% include 'devhub/new-landing/components/dev_footer.html' %}
     {% endif %}
+    {% include 'photon-footer.html' %}
 
     <div id="tooltip">
         <span></span>
