--- a/static/css/devhub/new-landing/dev-footer.less
+++ b/static/css/devhub/new-landing/dev-footer.less
@@ -1,6 +1,6 @@
 .DevHub-Footer {
   background-color: @color-scheme-default-background;
-  padding: 30px 0 0;
+  padding: 30px 0 40px;
   margin: 30px 0 0;
 
   a {
@@ -43,17 +43,5 @@
     li {
       margin-bottom: 8px;
     }
-  }
-}
-
-.DevHub-Footer-LanguageSwitcher {
-  justify-content: flex-end;
-
-  label {
-    display: block;
-    font-size: 16px;
-    font-weight: 400;
-    margin: 10px 0 4px;
-    text-transform: none;
   }
 }
