reduce 80px side gap to 24px; adjusting rest of css as needed

--- a/src/olympia/devhub/templates/devhub/new-landing/components/get_involved.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/get_involved.html
@@ -1,4 +1,4 @@
-<section class="DevHub-get-involved scheme-default">
+<section class="DevHub-get-involved content scheme-default">
   <div class="DevHub-content-container DevHub-content-container--get-involved">
     <div class="DevHub-callout-box DevHub-callout-box--get-involved">
       <div class="DevHub-content-image-wrapper DevHub-content-image-wrapper--get-involved">
