--- a/static/css/devhub/new-landing/dev-footer.less
+++ b/static/css/devhub/new-landing/dev-footer.less
@@ -31,8 +31,12 @@
 
 .DevHub-Footer-section {
   min-width: 250px;
-  margin-bottom: 20px;
+  margin: 0 10px 20px 0;
   font-size: 12px;
+
+  html[dir=rtl] & {
+    margin: 0 0px 20px 10px;
+  }
 
   h4 {
     font-size: 14px;
