--- a/static/css/devhub/new-landing/sections/submit-or-manage.less
+++ b/static/css/devhub/new-landing/sections/submit-or-manage.less
@@ -1,3 +1,11 @@
 .DevHub-content-container.submit-or-manage {
     flex-wrap: wrap;
 }
+
+.DevHub-content-image-wrapper--submit-or-manage-addon {
+    text-align: right;
+
+    html[dir=rtl] & {
+        text-align: left;
+    }
+}
