--- a/static/css/photon-site/footer.less
+++ b/static/css/photon-site/footer.less
@@ -22,7 +22,7 @@
 }
 
 .Footer-wrapper {
-    padding: 58px 20px;
+    padding: 58px @side-margin;
 
     @media @medium {
         display: grid;
@@ -34,10 +34,6 @@
         margin: 0 auto;
         max-width: @grid-max;
         width: 100%;
-    }
-
-    @media @large {
-        padding: 58px 80px;
     }
 }
 
