--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -2,8 +2,8 @@
   box-shadow: 0 4px 16px rgba(12,12,13,0.1);
 
   .DevHub-Navigation-list-wrapper {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: @side-margin;
+    padding-right: @side-margin;
     padding-top: 5px;
     padding-bottom: 5px;
   }
