--- a/static/css/devhub/new-landing/sections/banner.less
+++ b/static/css/devhub/new-landing/sections/banner.less
@@ -3,7 +3,7 @@
     align-self: center;
 }
 .DevHub-callout-box--banner {
-    margin-top: 20px;
+    margin: 20px 0 0;
     padding-bottom: 160px;
 
     h2 {
@@ -11,7 +11,6 @@
     }
 
     @media @medium {
-        margin: 20px 80px;
         padding-top: 40px;
         padding-bottom:100px;
         h2 {
@@ -29,6 +28,7 @@
 
 .DevHub-callout-box--banner::before {
     background: no-repeat bottom left url(../../../img/developers/new-landing/banner-background.svg);
+    background-size: (@grid-max - (@side-margin *2))  auto;
     content: '';
     position: absolute;
     top: 0;
