--- a/static/css/devhub/new-landing/common.less
+++ b/static/css/devhub/new-landing/common.less
@@ -89,7 +89,7 @@
 
 .DevHub-callout-box {
   background: #fff;
-  margin: 0 0 0;
+  margin: 0;
   padding: 0 20px 20px;
   position: relative;
   width: 100%;
