--- a/static/css/photon-site/footer.less
+++ b/static/css/photon-site/footer.less
@@ -92,6 +92,7 @@
     a:link,
     a:visited {
       font-size: 16px;
+      font-weight: 700;
       margin: 0;
     }
 }
@@ -143,9 +144,10 @@
 .Footer-copyright {
     font-size: 12px;
     grid-area: copyright;
+    padding-left: 0;
     padding-right: 20px;
     html[dir=rtl] & {
-        padding-right: auto;
+        padding-right: 0;
         padding-left: 20px;
     }
 
