reduce 80px side gap to 24px; adjusting rest of css as needed
# Conflicts:
#	static/css/devhub/new-landing/dev-footer.less

--- a/static/css/devhub/new-landing/dev-footer.less
+++ b/static/css/devhub/new-landing/dev-footer.less
@@ -25,9 +25,13 @@
 }
 
 .DevHub-Footer-section {
-  width: 260px;
-  margin-bottom: 20px;
+  min-width: 250px;
+  margin: 0 10px 20px 0;
   font-size: 12px;
+
+  html[dir=rtl] & {
+    margin: 0 0px 20px 10px;
+  }
 
   h4 {
     font-size: 14px;
