--- a/static/css/photon-site/footer.less
+++ b/static/css/photon-site/footer.less
@@ -22,7 +22,7 @@
 }
 
 .Footer-wrapper {
-    padding: 58px 20px;
+    padding: 58px @side-margin;
 
     @media @medium {
         padding: 58px 24px;
