--- a/static/css/devhub/new-landing/common.less
+++ b/static/css/devhub/new-landing/common.less
@@ -55,7 +55,11 @@
   background-color: @color-scheme-dark-background;
 
   p,
-  li {
+  li,
+  h1,
+  h2,
+  h3,
+  h4 {
     color: @color-scheme-dark-text;
   }
 
