fix the logged in banner background blocking the EW link

--- a/static/css/devhub/new-landing/sections/banner.less
+++ b/static/css/devhub/new-landing/sections/banner.less
@@ -5,6 +5,7 @@
 .DevHub-callout-box--banner {
     margin: 20px 0 0;
     padding-bottom: 160px;
+    background-color: transparent;
 
     h2 {
         display: inline-block;
@@ -35,6 +36,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: -1;
 
     .html-rtl & {
         transform: scaleX(-1);
