devhub header hamburger menu for mobile-size

--- a/static/css/devhub/new-landing/common.less
+++ b/static/css/devhub/new-landing/common.less
@@ -166,3 +166,7 @@
   border: none;
   background: linear-gradient(90deg, #0099F1, #9059FF, #B833E1, #E31587, #FC4055, #FF9640, #FFF36E);
 }
+
+.flex-grow {
+  flex-grow: 1;
+}
