--- a/static/css/devhub/new-landing/base.less
+++ b/static/css/devhub/new-landing/base.less
@@ -37,9 +37,11 @@
 @color-button-default: #0996F8;
 @color-button-primary: #fff;
 @color-button-register: #015fdf;
+@color-button-signout: rgba(12,12,12,0.1);
 @color-button-default-text: #fff;
 @color-button-primary-text: @color-items;
 @color-button-register-text: #fff;
+@color-button-signout-text: @color-text;
 
 // State colors in 'My Addons'
 @color-version-state-disabled: #9b9898;
@@ -189,9 +191,6 @@ h4 {
 .rating b {
   font-size: 14px;
 }
-
-// Mixins / Utilities
-@import 'utils';
 
 // Common component utilities
 @import 'common';
