--- a/static/css/devhub/new-landing/logo.less
+++ b/static/css/devhub/new-landing/logo.less
@@ -11,14 +11,10 @@
   }
 
   span {
-    display: none;
     align-self: center;
     font-weight: bold;
     margin-left: 10px;
-
-    @media @large {
-      display: inline;
-    }
+    margin-right: 0;
 
     html[dir=rtl] & {
       margin-left: 0;
