--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -6,59 +6,71 @@
     padding-right: @side-margin;
     padding-top: 5px;
     padding-bottom: 5px;
+    height: 100%;
   }
 
   ul {
-    align-items: center;
+
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
     width: 100%;
 
+    @media @large {
+      align-items: center;
+    }
+
     li {
-      margin: 10px auto;
+      margin: 25px 0 0 0;
 
       @media @large {
         margin: 10px;
         width: auto;
       }
 
+      &.in-hamburger-menu {
+        display: none;
+
+        @media @large {
+          display: inline;
+        }
+      }
+
       &:first-child {
-        margin: 0 auto 0 0;
+        margin: 0;
+        flex-grow: 1;
 
         html[dir=rtl] & {
           margin: 0 0 0 auto;
         }
       }
 
-      &.avatar {
-        display: none;
+      &.DevHub-Navigation-Logo-And-Close {
+        display: flex;
 
-        @media @large {
-          display: inline;
-        }
-
-        img {
-          max-width: 40px;
-          max-height: 40px;
-          border-radius: 50%;
+        .DevHub-Navigation-Logo {
+          flex-grow: 1;
         }
       }
 
-      &.DevHub-Navigation-Register,
-      &.DevHub-Navigation-SignOut {
+      &.DevHub-Navigation-Register {
         .Button {
           .button(@color-button-register-text, @color-button-register);
           padding-left: 15px;
           padding-right: 15px;
         }
+        a {
+          width: 100%;
+        }
+
         @media @large {
           margin-left: 50px;
           margin-right: 0;
 
           a {
             margin: 0 2px;
+            width: auto;
           }
 
           html[dir=rtl] & {
@@ -66,6 +78,71 @@
             margin-left: 0;
           }
         }
+      }
+
+      &.DevHub-Navigation-SignOut {
+        text-align: center;
+        margin: 0 -10px;
+
+        a {
+          width: 100%;
+          margin: 0 10px;
+          .button(@color-button-signout-text, @color-button-signout);
+          padding: 5px 0;
+        }
+
+        .avatar img {
+          max-width: 24px;
+          max-height: 24px;
+          border-radius: 50%;
+          vertical-align: middle;
+        }
+
+        @media @large {
+          a {
+            .button(@color-text, @color-scheme-light-background);
+          }
+          .avatar {
+            span {
+              display: none;
+            }
+
+            img {
+              max-width: 40px;
+              max-height: 40px;
+            }
+          }
+        }
+      }
+
+      &.DevHub-Navigation-Button,
+      .DevHub-Navigation-Close {
+        margin: 0 0 0 auto;
+        padding: 0 0 0 @side-margin;
+        border: 0 solid #e5e5e5;
+        border-width: 0 0 0 1px;
+
+        @media @large {
+          display: none;
+        }
+
+        html[dir=rtl] & {
+          margin: 0 auto 0 0;
+          padding: 0 @side-margin 0 0;
+          border-width: 0 1px 0 0;
+        }
+
+        a {
+          padding: 4px;
+          display: inline-block;
+          font-weight: 800;
+          font-size: 18px;
+        }
+      }
+
+      .DevHub-Navigation-Close {
+          display: none;
+          border-width: 0;
       }
 
       a {
@@ -81,9 +158,37 @@
     }
   }
 
-  &.scheme-medium {
-    ul li a {
-      color: @color-scheme-medium-text;
+  &:target {
+    height: 100vh;
+    margin-bottom: 24px;
+
+    .in-hamburger-menu {
+        display: list-item;
+    }
+
+    .Logo span {
+      display: none;
+    }
+
+    ul {
+      flex-direction: column;
+      height: 100%;
+
+      .DevHub-Navigation-Logo-And-Close {
+         flex-grow: 0;
+      }
+
+      .DevHub-Navigation-Button {
+        display: none;
+      }
+
+      .DevHub-Navigation-Close {
+        display: inline;
+      }
+
+      .DevHub-Navigation-SignOut {
+        display: flex;
+      }
     }
   }
 }
