--- a/static/css/devhub/new-landing/sections/connect.less
+++ b/static/css/devhub/new-landing/sections/connect.less
@@ -78,7 +78,7 @@
 
     .form_input {
         background: rgba(177,177,179,0.2);
-        color: #fff;
+        color: @color-scheme-dark-text;
         border: 0;
         padding: 6px;
         line-height: 20px;
@@ -112,6 +112,8 @@
             background-color: @color-scheme-dark-text;
             color: @color-scheme-dark-background;
             font-size: 14px;
+            border-radius: 4px;
+            border-width: 0;
         }
     }
 
@@ -135,10 +137,14 @@
 }
 
 a.Before-Icon::before {
-    padding-right: 0.3em;
+    padding: 0 0.3em 0 0;
     display: inline-block;
     line-height: 1.2;
     vertical-align: middle;
+
+    html[dir=rtl] & {
+        padding: 0 0 0 0.3em;
+    }
 }
 
 a.Before-Icon-twitter::before {
