--- a/static/css/devhub/new-landing/sections/connect.less
+++ b/static/css/devhub/new-landing/sections/connect.less
@@ -109,8 +109,7 @@
 
         button {
             height: 32px;
-            background-color: @color-scheme-dark-text;
-            color: @color-scheme-dark-background;
+            .button(@color-scheme-dark-background, @color-scheme-dark-text);
             font-size: 14px;
             border-radius: 4px;
             border-width: 0;
