--- a/static/css/devhub/new-landing/base.less
+++ b/static/css/devhub/new-landing/base.less
@@ -6,7 +6,8 @@
 @medium: ~"only screen and (min-width: 700px)";
 @large: ~"only screen and (min-width: 960px)";
 @retina: ~"only screen and (min-resolution: 1.5dppx)";
-@side-margin: 24px;
+@side-margin: 10px;
+@medium-side-margin: 24px;
 
 // Fonts
 @font-primary: 'Fira Sans', sans-serif;
