increase hamburger button font size

--- a/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
@@ -29,7 +29,7 @@
         {{ _('Blog') }}
       </a></li>
 
-      <li class="DevHub-Navigation-Button">
+      <li class="DevHub-Navigation-Open">
         <a href="#nav-menu">&#9776;</a>
       </li>
 
