make extensionworkshop.com url a setting

--- a/src/olympia/devhub/templates/devhub/new-landing/components/banner.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/banner.html
@@ -10,7 +10,7 @@
             we’ve got the resources to support you.
           {% endtrans %}
         </p>
-        <a href="https://extensionworkshop.com">{{ _('Visit the Extension Workshop') }}</a>
+        <a href="{{ settings.EXTENSION_WORKSHOP_URL }}">{{ _('Visit the Extension Workshop') }}</a>
       </div>
     </div>
   </div>
