--- a/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
@@ -16,7 +16,7 @@
         </a></li>
       {% endif %}
 
-      <li class="in-hamburger-menu"><a href="https://extensionworkshop.com/?utm_source=addons.mozilla.org&utm_medium=referral&utm_content=devhub-menu-link">
+      <li class="in-hamburger-menu"><a href="{{ settings.EXTENSION_WORKSHOP_URL }}/?utm_source=addons.mozilla.org&utm_medium=referral&utm_content=devhub-menu-link">
           {{ _('Extension Workshop') }}
       </a></li>
       <li class="in-hamburger-menu"><a href="https://developer.mozilla.org/en-US/Add-ons">
