--- a/src/olympia/devhub/templates/devhub/new-landing/components/overview.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/overview.html
@@ -8,6 +8,6 @@
         we’ve got the resources to support you.
       {% endtrans %}
     </p>
-    <a href="https://extensionworkshop.com" class="Button Button--primary">{{ _('Learn how to make an extension') }}</a>
+    <a href="{{ settings.EXTENSION_WORKSHOP_URL }}" class="Button Button--primary">{{ _('Learn how to make an extension') }}</a>
   </div>
 </section>
