--- a/src/olympia/templates/photon-footer.html
+++ b/src/olympia/templates/photon-footer.html
@@ -10,7 +10,7 @@
             <ul class="Footer-links">
                 <li><a href="{{ url('pages.about') }}">About</a></li>
                 <li><a href="https://blog.mozilla.com/addons">Blog</a></li>
-                <li><a class="Footer-extension-workshop-link" href="https://extensionworkshop.com/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=footer-link">Extension Workshop</a></li>
+                <li><a class="Footer-extension-workshop-link" href="{{ settings.EXTENSION_WORKSHOP_URL }}/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=footer-link">Extension Workshop</a></li>
                 <li><a href="{{ url('devhub.index') }}">Developer Hub</a></li>
                 <li><a href="https://developer.mozilla.org/docs/Mozilla/Add-ons/AMO/Policy">Developer Policies</a></li>
                 <li><a href="https://discourse.mozilla-community.org/c/add-ons">Forum</a></li>
