hide hamburger menu from large display even if already shown

--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -162,6 +162,7 @@
     }
   }
 
+  @media @notlarge {
   &:target {
     height: 100vh;
     margin-bottom: 24px;
@@ -194,5 +195,5 @@
         display: flex;
       }
     }
-  }
+  }}
 }
