re-align text on logout/profile buttons in hamburger menu

--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -83,6 +83,7 @@
       &.DevHub-Navigation-SignOut {
         text-align: center;
         margin: 0 -10px;
+        line-height: 2;
 
         a {
           width: 100%;
@@ -99,6 +100,7 @@
           max-height: 24px;
           border-radius: 50%;
           vertical-align: middle;
+          margin-top: -2px;
         }
 
         @media @large {
