reduce some margins in connect with us section

--- a/static/css/devhub/new-landing/common.less
+++ b/static/css/devhub/new-landing/common.less
@@ -137,7 +137,7 @@
 
   .DevHub-content-header {
     max-width: 100%;
-    margin: 60px 0 20px;
+    margin: 10px 0 0;
   }
 
   .DevHub-content-image-wrapper {
