--- a/static/css/devhub/new-landing/sections/submit-or-manage.less
+++ b/static/css/devhub/new-landing/sections/submit-or-manage.less
@@ -2,7 +2,13 @@
     flex-wrap: wrap;
 }
 
-.DevHub-content-image-wrapper--submit-or-manage-addon {
+.DevHub-content-header--submit-or-manage {
+    @media @medium {
+        margin: 60px 0 20px;
+    }
+}
+
+.DevHub-content-image-wrapper--submit-or-manage {
     text-align: right;
 
     html[dir=rtl] & {
