Fix versions needing human review headings css

--- a/static/css/zamboni/reviewers.less
+++ b/static/css/zamboni/reviewers.less
@@ -719,16 +719,16 @@ div.reviewer-stats-table > div.reviewer-stats-dark {
 .review-files tr.listing-header {
      border-top: 1px solid #A5BFCE;
 }
-#need-human-review .review-files tr.listing-header {
+#needs-human-review .review-files tr.listing-header {
      border-top: 1px solid #fede94;
 }
-#need-human-review .review-files tr.listing-header {
+#needs-human-review .review-files tr.listing-header {
     background-color: #ffeec5;
 }
-#need-human-review .review-files tr.listing-header:hover {
+#needs-human-review .review-files tr.listing-header:hover {
     background: linear-gradient(#FFFFFF, #ffcf5d);
 }
-#need-human-review .review-files tr.listing-header:active {
+#needs-human-review .review-files tr.listing-header:active {
     background: linear-gradient(#ffcf5d, #FFF);
 }
 .review-files tr.listing-header:hover {
