devhub landing to 10px page margin for <700px wide (#12734)

--- a/static/css/devhub/new-landing/base.less
+++ b/static/css/devhub/new-landing/base.less
@@ -7,7 +7,8 @@
 @large: ~"only screen and (min-width: 960px)";
 @notlarge: ~"only screen and (max-width: 959px)";
 @retina: ~"only screen and (min-resolution: 1.5dppx)";
-@side-margin: 24px;
+@side-margin: 10px;
+@medium-side-margin: 24px;
 
 // Fonts
 @font-primary: 'Fira Sans', sans-serif;
