--- a/src/olympia/reviewers/templates/reviewers/includes/paginator_history.html
+++ b/src/olympia/reviewers/templates/reviewers/includes/paginator_history.html
@@ -27,4 +27,7 @@
     </li>
     {% endfor %}
   </ol>
+  {% if versions_needing_human_review %}
+    <strong class="risk-high">{{ _('{num} versions needing human review on other pages.')|format_html(num=versions_needing_human_review) }}</strong>
+  {% endif %}
 {% endif %}
