--- a/src/olympia/reviewers/templates/reviewers/includes/paginator_history.html
+++ b/src/olympia/reviewers/templates/reviewers/includes/paginator_history.html
@@ -27,4 +27,7 @@
     </li>
     {% endfor %}
   </ol>
+  {% if versions_flagged_by_scanners %}
+    <strong class="risk-high">{{ _('{num} versions flagged by scanners on other pages.')|format_html(num=versions_flagged_by_scanners) }}</strong>
+  {% endif %}
 {% endif %}
