--- a/src/olympia/devhub/templates/devhub/new-landing/components/connect.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/connect.html
@@ -7,8 +7,8 @@
       <div class="DevHub-Connect-section">
         <h4>{{ _('Twitter') }}</h4>
         <ul class="DevHub-content-copy--Connect-twitter-list">
-          <li>{{ _('For developers') }}:<a class="Before-Icon Before-Icon-twitter" href="https://twitter.com/mozamo" target="_blank" rel="noopener noreferrer">@mozamo</a></li>
-          <li>{{ _('For end users') }}:<a class="Before-Icon Before-Icon-twitter" href="https://twitter.com/rockyourfirefox" target="_blank" rel="noopener noreferrer">@rockyourfirefox</a></li>
+          <li>{{ _('For developers') }}:<a class="Before-Icon Before-Icon-twitter" href="https://twitter.com/mozamo" target="_self" rel="noopener noreferrer">@mozamo</a></li>
+          <li>{{ _('For end users') }}:<a class="Before-Icon Before-Icon-twitter" href="https://twitter.com/rockyourfirefox" target="_self" rel="noopener noreferrer">@rockyourfirefox</a></li>
         </ul>
       </div>
       <div class="DevHub-Connect-section">
