Buttons made visible in DevHub mobile view
fixes #12594

New Add-on and Theme buttons were not visible in mobile view.
The issue is corrected by removing display none property and
changing flex direction of container to column for device-
width less than 960px.

--- a/static/css/devhub/new-landing/sections/my-addons.less
+++ b/static/css/devhub/new-landing/sections/my-addons.less
@@ -117,9 +117,13 @@
 .DevHub-MyAddons-item-buttons {
   margin-top: 20px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+
+  @media @large {
+    flex-direction: row;
+  }
 }
 
 .DevHub-MyAddons-item-buttons-all {
@@ -129,7 +133,6 @@
 }
 
 .DevHub-MyAddons-item-buttons-submit {
-  display: none;
 
   margin-left: auto;
 
