Implement "Delay auto-approval by 24 hours/indefinitely" action (#12807)
Implement "Delay auto-approval by 24 hours/indefinitely" action

This is separate from auto_approval_disabled that can be set
by admin reviewers for now, because scanners forcibly set it
on the add-on as soon as a version matching a rule with the
corresponding action is found.

--- a/src/olympia/reviewers/templates/reviewers/review.html
+++ b/src/olympia/reviewers/templates/reviewers/review.html
@@ -245,6 +245,16 @@
                     data-toggle-button-selector="#disable_auto_approval"
                     id="enable_auto_approval" type="button">{{ _('Enable Auto-Approval') }}</button>
           </li>
+          {% if addon.auto_approval_delayed_until and addon.auto_approval_delayed_until > now %}
+            {# This flag is only meant to be enabled by scanners, but admins can still unset it. #}
+            <li>
+              <button data-api-url="{{ drf_url('reviewers-addon-flags', addon.pk) }}"
+                      data-api-method="patch"
+                      data-api-data="{&quot;auto_approval_delayed_until&quot;: null}"
+                      title="{{ _('Auto-Approval currently disabled until {date}')|format_html(date=addon.auto_approval_delayed_until|datetime) }}"
+                      id="clear_auto_approval_delayed_until" type="button">{{ _('Clear Auto-Approval Extra Delay') }}</button>
+            </li>
+          {% endif %}
         {% endif %}
         {% if addon.pending_info_request %}
           <li>
