--- a/src/olympia/devhub/templates/devhub/addons/submit/done.html
+++ b/src/olympia/devhub/templates/devhub/addons/submit/done.html
@@ -58,15 +58,10 @@
     </p>
   {% endif %}
 {% else %}
-  <h3>{{ _("Version Signed") }}</h3>
+  <h3>{{ _("Version Signature Pending") }}</h3>
   <p>
-    {{ _("You’re done! This version is signed and ready to for self-distribution. "
-         "You can download it by clicking the button below.") }}
-  </p>
-  <p>
-    {% set file = uploaded_version.all_files[-1] %}
-    <a class="button" id="download-addon-url" download href="{{ file.get_absolute_url('devhub') }}">{{
-        _("Download {0}")|format_html(file.pretty_filename()) }}</a>
+    {{ _("You’re done! This version will be signed for self-distribution shortly. "
+         "You will be notified by email when the signed file is ready for download.") }}
   </p>
 {% endif %}
 
