Made active, hover, and focus pseudo-classes change the sign up button text color

--- a/static/css/devhub/new-landing/sections/connect.less
+++ b/static/css/devhub/new-landing/sections/connect.less
@@ -114,7 +114,13 @@
             border-radius: 0.25rem;
             border-width: 0;
             cursor: pointer;
-            transition: background-color 0.25s ease-out;
+            transition: all 0.25s ease-out;
+
+            &:active,
+            &:hover,
+            &:focus {
+                color: @color-button-register;
+            }
         }
     }
 
