Display auto approval delay as a flag in reviewer queues

--- a/static/css/zamboni/reviewers.less
+++ b/static/css/zamboni/reviewers.less
@@ -13,7 +13,7 @@
 .app-icon, .platform-icon {
     float: left;
     margin-right: 4px;
-    background: url(../../img/developers/reviewer-sprite.png?10) no-repeat top left;
+    background: url(../../img/developers/reviewer-sprite.png?12) no-repeat top left;
     width: 16px; height: 16px;
     position: relative;
     top: 4px;
@@ -34,6 +34,8 @@
 .ed-sprite-sources-provided { background-position: 0 -192px; }
 .ed-sprite-webextension { background-position: 0 -208px; }
 .ed-sprite-expired-info { background-position: 0 -272px; }
+.ed-sprite-auto-approval-delayed-temporarily { background-position: 0 -288px; }
+.ed-sprite-auto-approval-delayed-indefinitely { background-position: 0 -304px; }
 
 .platform-icon {
     background: url(../../img/developers/platforms.png?8) no-repeat top left;
