--- a/src/olympia/reviewers/templates/reviewers/includes/version.html
+++ b/src/olympia/reviewers/templates/reviewers/includes/version.html
@@ -7,6 +7,10 @@
     {% if version.autoapprovalsummary and version.autoapprovalsummary.confirmed %}
     <span class="light">{{ _("(Confirmed)") }}</span>
     {% endif %}
+
+    {% if addon.block and addon.block.is_version_blocked(version.version) %}
+    <span class="blocked-version">Blocked</span>
+    {% endif %}
   </th>
 </tr>
 <tr class="listing-body">
