--- a/src/olympia/devhub/templates/devhub/addons/submit/distribute.html
+++ b/src/olympia/devhub/templates/devhub/addons/submit/distribute.html
@@ -7,6 +7,9 @@
 <form method="post" class="item addon-submit-distribute">
   {% csrf_token %}
   <h3>{{ _('How to Distribute this Version') }}</h3>
+    {% if addon and addon.disabled_by_user %}
+      {% include "devhub/addons/includes/invisible_channel_warning.html" %}
+    {% endif %}
     <div>
         {{ distribution_form.channel }}
     </div>
