--- a/src/olympia/devhub/templates/devhub/addons/submit/upload.html
+++ b/src/olympia/devhub/templates/devhub/addons/submit/upload.html
@@ -10,10 +10,16 @@
     data-addon-is-listed="{% if channel_param == 'listed' %}true{% else %}false{% endif %}">
   {% csrf_token %}
   {% if submit_page == 'version' %}
-      <h3>{{ _('Where to Host Version') }}</h3>
+    <h3>{{ _('Where to Host Version') }}</h3>
+    {% if submit_page == 'version' and addon.disabled_by_user %}
+      {# In the version submit page, if add-on is disabled by user, the view should
+         already prevent channel from being "listed". We need to prevent the change
+         link from being displayed, it wouldn't work anyway. #}
+      {% include "devhub/addons/includes/invisible_channel_warning.html" %}
+    {% endif %}
     <p class="addon-submit-distribute">
       {{ channel_choice_text|safe }}
-      {% if submit_page == 'version' %}
+      {% if submit_page == 'version' and not addon.disabled_by_user %}
         <a href="{{ url('devhub.submit.version.distribution', addon.slug) }}?channel={{ channel_param }}">{{ _('Change') }}</a>
       {% endif %}
     </p>
