--- a/src/olympia/blocklist/templates/blocklist/multiple_block.html
+++ b/src/olympia/blocklist/templates/blocklist/multiple_block.html
@@ -31,17 +31,17 @@
   <div>
     <div class="form-row horizontal-grid">
       <div>
-        <h3>{% blocktrans with count=existing|length %}{{ count }} Add-on GUIDs are already blocked{% endblocktrans %}:</h3>
+        <h3>{% blocktrans with count=existing_guids|length %}{{ count }} Add-on GUIDs are already blocked{% endblocktrans %}:</h3>
         <ul class="guid_list">
-          {% for block_obj in existing %}
-          <li>{{ block_obj.guid }}</li>
+          {% for guid in existing_guids %}
+          <li>{{ guid }}</li>
           {% endfor %}
         </ul>
       </div>
       <div>
-        <h3>{% blocktrans with count=invalid|length %}{{ count }} Add-on GUIDs were not found{% endblocktrans %}:</h3>
+        <h3>{% blocktrans with count=invalid_guids|length %}{{ count }} Add-on GUIDs were not found{% endblocktrans %}:</h3>
         <ul class="guid_list">
-          {% for guid in invalid %}
+          {% for guid in invalid_guids %}
           <li>{{ guid }}</li>
           {% endfor %}
         </ul>
@@ -52,9 +52,9 @@
     <h2>{% trans 'Add New Blocks' %}</h2>
     <div class="form-row field-blocks-to-add">
       <div>
-        <h3>{% blocktrans with count=new|length %}{{ count }} Add-on GUIDs to Block{% endblocktrans %}:</h3>
+        <h3>{% blocktrans with count=blocks|length %}{{ count }} Add-on GUIDs to Block{% endblocktrans %}:</h3>
          <ul class="guid_list">
-          {% for block_obj in new %}
+          {% for block_obj in blocks %}
             <li>
               {{ block_obj.guid }}.
               <span class="addon-name">{{ block_obj.addon.name }}</span>
