--- a/src/olympia/blocklist/templates/blocklist/multiple_block.html
+++ b/src/olympia/blocklist/templates/blocklist/multiple_block.html
@@ -61,6 +61,7 @@
               ({{ block_obj.addon.average_daily_users }} {% trans 'users' %}).
               {{ block_obj.review_listed_link }}
               {{ block_obj.review_unlisted_link }}
+              {% if block_obj.id %}[<a href="{% url opts|admin_urlname:'change' block_obj.id %}">{% trans 'edit existing Block' %}</a>]{% endif %}
             </li>
           {% endfor %}
         </ul>
