rm backend support for featured collections/addons - django migration should be created and landed in following tag

--- a/src/olympia/devhub/templates/devhub/addons/forms_shared/media.html
+++ b/src/olympia/devhub/templates/devhub/addons/forms_shared/media.html
@@ -36,8 +36,7 @@
                   {# L10n: The size of the icon #}
                   {{ _('32x32px') }}
                   {{ tip(None,
-                         _("Used in listings of add-ons, like search results "
-                           "and featured add-ons.")) }}
+                         _("Used in listings of add-ons, like search results.")) }}
                 </div>
 
                 <div class="icon_preview" id="icon_preview_64">
@@ -155,7 +154,7 @@
                   {% endif %}
                   {% trans %}
                     Having screenshots in your product page greatly increases its chances of
-                    being installed and being featured in the homepage.
+                    being installed.
                   {% endtrans %}
                 </div>
               {% endif %}
